--- a/src/app/commissions/commissions.scss
+++ b/src/app/commissions/commissions.scss
@@ -19,6 +19,14 @@
       }
       &.r {
         right: -800px;
+
+        @media screen and (max-width: 1024px) {
+          top: 400px;
+          filter: brightness(70%);
+        }
+        @media screen and (max-width: 550px) {
+          opacity: 0.2;
+        }
       }
     }
     .smoke-bg {
@@ -37,7 +45,7 @@
     }
 
     .confine {
-      max-width: 1200px;
+      max-width: min(90%, 1200px);
       margin: 0 auto;
     }
 
@@ -55,6 +63,10 @@
         gap: 50px;
         padding: 1em 0;
 
+        @media screen and (max-width: 768px) {
+          display: flex;
+          flex-direction: column;
+        }
         .step {
           background: white;
           padding: 1.5em;
@@ -79,6 +91,9 @@
           }
           &:not(:last-of-type) {
             &::before {
+              @media screen and (max-width: 768px) {
+                display: none;
+              }
               content: url("/de/arrow.svg");
               position: absolute;
               display: flex;
@@ -124,8 +139,24 @@
       display: grid;
       grid-template-columns: 1fr 1fr 1fr;
       gap: 80px;
+
+      @media screen and (max-width: 768px) {
+        grid-template-columns: repeat(2, 1fr);
+      }
+      @media screen and (max-width: 550px) {
+        display: flex;
+        flex-direction: column;
+      }
       .category {
         padding: 1em;
+
+        @media screen and (max-width: 550px) {
+          display: flex;
+          flex-direction: column;
+          justify-content: center;
+          align-items: center;
+          text-align: center;
+        }
       }
       .icon {
         width: 110px;
@@ -154,6 +185,11 @@
         flex-direction: column;
         // align-items: center;
         gap: 0.5em;
+
+        @media screen and (max-width: 550px) {
+          width: 100%;
+          text-align: left;
+        }
         p {
           background: var(--lBlue);
           color: var(--black);
@@ -219,7 +255,7 @@
     }
     .confine {
       margin: 0 auto;
-      max-width: 1200px;
+      max-width: min(1200px, 90%);
     }
 
     .btn-examples {
@@ -236,6 +272,16 @@
       width: max-content;
       &:hover {
         scale: 1;
+        &::before {
+          scale: 1 1;
+        }
+        span {
+          color: var(--black);
+        }
+      }
+      @media screen and (max-width: 550px) {
+        scale: 1;
+        background: var(--gold);
         &::before {
           scale: 1 1;
         }
@@ -292,15 +338,20 @@
     .price-list {
       position: relative;
 
+      @media screen and (max-width: 768px) {
+        padding: 2em 0;
+      }
       h3.h {
         font-size: 2.2rem;
         color: var(--gold);
         text-transform: uppercase;
       }
       .main-prices {
-        display: grid;
-        grid-template-columns: 1fr 1fr;
-        gap: 1em;
+        @media screen and (min-width: 420px) {
+          display: grid;
+          grid-template-columns: 1fr 1fr;
+          gap: 1em;
+        }
 
         margin: 1em 0;
         margin-top: 1.5em;
@@ -310,6 +361,10 @@
           box-shadow: 0px 4px 0px rgba(0, 0, 0, 0.41);
           padding: 0.25em 0.8em;
           transition: all 500ms var(--mainEase);
+
+          @media screen and (max-width: 420px) {
+            margin: 1em 0;
+          }
           &:hover {
             transform: translateY(4%);
           }
@@ -328,6 +383,9 @@
       }
       .add-ons {
         padding-left: 20%;
+        @media screen and (max-width: 420px) {
+          padding-left: 10%;
+        }
         .ao-title {
           display: flex;
           font-size: 1.2rem;
@@ -385,7 +443,9 @@
     .top-pricing {
       .price-heading {
         .sizing {
-          max-width: 50%;
+          @media screen and (min-width: 768px) {
+            max-width: 50%;
+          }
         }
       }
       .banner {
@@ -408,9 +468,11 @@
         }
       }
       .group {
-        display: grid;
-        grid-template-columns: 1fr 1fr;
-        gap: 100px;
+        @media screen and (min-width: 768px) {
+          display: grid;
+          grid-template-columns: 1fr 1fr;
+          gap: 100px;
+        }
       }
     }
 
@@ -425,7 +487,14 @@
         opacity: 0.04;
       }
       .price-heading {
-        margin-bottom: 70px;
+        @media screen and (min-width: 768px) {
+          margin-bottom: 70px;
+        }
+        @media screen and (max-width: 768px) {
+          &.confine {
+            max-width: unset;
+          }
+        }
       }
 
       &:nth-of-type(even) {
@@ -438,7 +507,9 @@
         }
         & > .confine {
           display: flex;
-          flex-direction: row-reverse;
+          @media screen and (min-width: 800px) {
+            flex-direction: row-reverse;
+          }
           figure {
             .side-decor {
               left: -10%;
@@ -450,11 +521,14 @@
           }
         }
       }
+
       & > .confine {
         // display: grid;
         display: flex;
         // grid-template-columns: 1fr 1fr;
-        gap: 100px;
+        @media screen and (min-width: 768px) {
+          gap: 100px;
+        }
 
         .details {
         }
@@ -480,6 +554,10 @@
           .art {
             position: relative;
             height: 600px;
+
+            @media screen and (max-width: 768px) {
+              height: 350px;
+            }
             .clip {
               background: #23292b;
             }
@@ -506,6 +584,14 @@
             margin: 4em 0;
           }
         }
+
+        @media screen and (max-width: 800px) {
+          flex-direction: column;
+          figure {
+            // width: 100%;
+            max-width: unset;
+          }
+        }
       }
     }
 
@@ -513,15 +599,19 @@
       background: #161e20;
       padding: 50px 0;
       .confine {
-        max-width: 950px;
+        max-width: min(950px, 80%);
       }
       .text {
         margin: 1em 0;
-        display: grid;
-        grid-template-columns: 1fr 1fr;
-        gap: 5em;
+
+        @media screen and (min-width: 550px) {
+          display: grid;
+          grid-template-columns: 1fr 1fr;
+          gap: 5em;
+        }
         .p {
           color: #757e8e;
+          margin: 1em 0;
           a {
             font-weight: bold;
             display: inline-block;
@@ -544,6 +634,11 @@
       position: relative;
       .cloud {
         position: absolute;
+
+        @media screen and (max-width: 550px) {
+          scale: 0.5;
+          top: -250px !important;
+        }
         &.l {
           left: -150px;
           top: -180px;
@@ -556,9 +651,11 @@
         }
       }
       .confine {
-        display: grid;
-        grid-template-columns: 1.1fr 1fr;
-        max-width: 950px;
+        @media screen and (min-width: 768px) {
+          display: grid;
+          grid-template-columns: 1.1fr 1fr;
+        }
+        max-width: min(950px, 90%);
         gap: 3em;
         align-items: center;
         figure {
@@ -624,6 +721,15 @@
         left: -50px;
         scale: 1;
         width: 400px;
+
+        @media screen and (max-width: 800px) {
+          top: -200px;
+          scale: 0.7;
+        }
+        @media screen and (max-width: 550px) {
+          top: -200px;
+          left: -190px;
+        }
       }
       &:nth-of-type(even) {
         .branch {
@@ -637,6 +743,9 @@
         .confine {
           display: flex;
           flex-direction: row-reverse;
+          @media screen and (max-width: 550px) {
+            flex-direction: column;
+          }
           .title {
             .h {
               text-align: right;
@@ -646,6 +755,9 @@
       }
       .confine {
         display: flex;
+        @media screen and (max-width: 550px) {
+          flex-direction: column;
+        }
         // flex-direction: column;
         gap: 1em;
         // padding: 100px 0;
@@ -655,8 +767,10 @@
           min-width: 35%;
         }
         .details {
-          display: grid;
-          grid-template-columns: 1fr 1fr;
+          @media screen and (min-width: 800px) {
+            display: grid;
+            grid-template-columns: 1fr 1fr;
+          }
           gap: 50px;
           position: relative;
           padding: 70px 70px;
