--- a/src/app/components/footer/footer.scss
+++ b/src/app/components/footer/footer.scss
@@ -6,6 +6,10 @@
   position: relative;
 
   overflow-x: clip;
+
+  padding-bottom: 3em;
+  // @media screen and (max-width: 550px) {
+  // }
   .gold-branch {
     position: absolute;
     &.l {
