--- a/src/app/home.scss
+++ b/src/app/home.scss
@@ -17,7 +17,7 @@
         display: flex;
         flex-direction: column;
         gap: 1em;
-        margin-left: 200px;
+        margin-left: 150px;
         padding-right: 50px;
         padding-top: 2em;
 
@@ -39,7 +39,7 @@
         }
 
         .sh {
-          font-size: 3rem;
+          font-size: 2rem;
         }
 
         .p {
@@ -296,11 +296,13 @@
 
           .sh {
             // margin: 1em 0;
-            padding: 1em 0;
+            // padding: 1em 0;
           }
           .text {
             display: grid;
             grid-template-columns: 1fr 1fr;
+            align-items: flex-end;
+            margin-bottom: 4em;
             gap: 150px;
 
             @media screen and (max-width: 1024px) {
@@ -981,7 +983,7 @@
 
   #invitation {
     position: relative;
-
+    margin-top: 150px;
     .blue-branch {
       position: absolute;
       width: 350px;
@@ -1064,6 +1066,11 @@
             display: block;
             font-family: var(--fontsb);
           }
+        }
+
+        .action {
+          display: flex;
+          gap: 1em;
         }
       }
       figure {
