--- a/src/app/artists/artists.scss
+++ b/src/app/artists/artists.scss
@@ -18,10 +18,10 @@
       }
     }
     .confine {
-      max-width: min(1100px, 90%);
+      max-width: min(800px, 90%);
       margin: 0 auto;
       display: grid;
-      grid-template-columns: 1fr 1fr;
+      grid-template-columns: 1fr 2fr;
       @media screen and (max-width: 768px) {
         display: flex;
         flex-direction: column;
@@ -35,19 +35,21 @@
       }
       figure {
         display: grid;
-        grid-template-columns: 1fr 1fr;
+        // grid-template-columns: 1fr 1fr;
         gap: 2em;
         position: relative;
         .splat {
           position: absolute;
           height: 100%;
           z-index: -1;
-          scale: 1.7;
-          opacity: 0.5;
+          scale: 4;
+          clip-path: initial;
+          opacity: 0.3;
+          object-fit: contain;
         }
         img {
           width: 100%;
-          height: 250px;
+          height: 300px;
           object-fit: cover;
         }
       }
@@ -218,11 +220,10 @@
                   height: 50px;
                   // rotate: 0deg;
                 }
-
-                @media screen and (min-width: 768px) {
-                  .line.s {
-                    display: none;
-                  }
+              }
+              @media screen and (min-width: 768px) {
+                .line.s {
+                  display: none;
                 }
               }
             }
