Fix portfolio button back

--- a/src/app/commissions/commissions.scss
+++ b/src/app/commissions/commissions.scss
@@ -323,6 +323,7 @@
       }
     }
     .price-heading {
+      max-width: 100%;
       .h {
         color: var(--gold);
         font-size: 3.5rem;
