add data to welcome section

--- a/src/app/commissions/commissions.scss
+++ b/src/app/commissions/commissions.scss
@@ -323,7 +323,9 @@
       }
     }
     .price-heading {
-      max-width: 100%;
+      &:not(.top) {
+        max-width: 100%;
+      }
       .h {
         color: var(--gold);
         font-size: 3.5rem;
