--- a/src/app/tooltip.scss
+++ b/src/app/tooltip.scss
@@ -12,6 +12,9 @@
   border-radius: 1em 0 1em 0;
   p {
     color: var(--gold);
+    display: flex;
+    align-items: center;
+    gap: 0.5em;
   }
 
   // opacity: 1;
