Add text to the rest of the data

--- a/src/app/contact/contact.scss
+++ b/src/app/contact/contact.scss
@@ -87,6 +87,7 @@
         display: grid;
         grid-template-columns: 1fr 1fr;
         margin: 3em 0;
+        gap: 1em;
         .info {
           h2 {
             font-size: 0.9rem;
