--- a/src/app/portfolio/portfolio.scss
+++ b/src/app/portfolio/portfolio.scss
@@ -1,6 +1,7 @@
 #page_portfolio {
-  // overflow-y: hidden;
+  overflow-y: hidden;
   max-height: 100vh;
+  position: relative;
   #portfolio-display {
     width: 100%;
     height: 100%;
@@ -25,7 +26,6 @@
       }
       position: relative;
       z-index: 100;
-
       .close-btn {
         background: var(--black);
         color: white;
@@ -136,6 +136,9 @@
         .p {
           color: white;
           margin: 1em 0;
+          p {
+            color: var(--white);
+          }
         }
       }
       display: flex;
@@ -157,6 +160,7 @@
           box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.369);
           color: #23292b96;
           padding: 0.25em 1em;
+          text-transform: uppercase;
           &.selected {
             background: var(--black);
             border: 2px solid var(--gold);
@@ -175,6 +179,7 @@
       @media screen and (max-width: 768px) {
         min-height: 900px;
       }
+      min-height: 100vh;
 
       .lists {
         // height: 90vh;
