--- a/src/app/artists/artists.scss
+++ b/src/app/artists/artists.scss
@@ -197,6 +197,8 @@
                 }
                 span {
                   display: block;
+                  width: 100%;
+                  height: 100%;
                   rotate: -45deg;
                 }
                 svg {
