--- a/src/app/components/footer/footer.scss
+++ b/src/app/components/footer/footer.scss
@@ -149,14 +149,14 @@
 
       .contacts {
         display: flex;
-        gap: 2em;
+        gap: 1.4em;
         margin: 1em;
         .footer-contact {
           border: 3px;
           width: 40px;
           height: 40px;
           border: 3px solid var(--gold);
-          padding: 0.5em;
+          padding: 0.3em;
           rotate: 45deg;
           &:hover {
             background: var(--gold);
@@ -167,6 +167,8 @@
           }
           span {
             display: block;
+            width: 100%;
+            height: 100%;
             rotate: -45deg;
           }
           svg {
