--- a/src/app/commissions/commissions.scss
+++ b/src/app/commissions/commissions.scss
@@ -210,8 +210,19 @@
       position: relative;
       .p {
         text-align: center;
+
         a {
+          display: inline-flex;
+          align-items: center;
+          gap: 0.2em;
           font-weight: bold;
+
+          svg {
+            display: block;
+            // padding-top: 0.em;
+            // top: 15%;
+            transform: translateY(8%);
+          }
         }
       }
     }
@@ -341,6 +352,14 @@
       .p {
         margin: 1em 0;
         color: #757e8e;
+        b {
+          font-weight: bolder;
+          color: #a0afc8;
+          // filter: brightness(140%);
+        }
+        p {
+          color: #757e8e;
+        }
       }
     }
 
