--- a/src/app/artists/artists.scss
+++ b/src/app/artists/artists.scss
@@ -50,7 +50,10 @@
         img {
           width: 100%;
           height: 300px;
-          object-fit: cover;
+          object-fit: contain;
+          @media screen and (max-width: 420px) {
+            height: 400px;
+          }
         }
       }
     }
@@ -296,7 +299,7 @@
               @media screen and (max-width: 768px) {
                 display: grid;
                 grid-template-columns: 1fr 1fr;
-                img {
+                .p-img {
                   width: 100%;
                   object-fit: cover;
                   height: 200px;
