--- a/src/app/home.scss
+++ b/src/app/home.scss
@@ -13,6 +13,9 @@
       grid-template-columns: 1fr;
     }
     .title-group {
+      p {
+        max-width: 80%;
+      }
       .top-part {
         display: flex;
         flex-direction: column;
@@ -22,8 +25,9 @@
         padding-top: 2em;
 
         @media screen and (max-width: 420px) {
-          text-align: center;
-          justify-content: center;
+          text-align: left;
+          justify-content: left;
+          max-width: 100%;
           .sh,
           .p,
           .hm {
@@ -103,9 +107,6 @@
       }
       .h {
         // font-size: 3rem;
-      }
-      p {
-        max-width: 80%;
       }
     }
     figure {
@@ -204,7 +205,8 @@
       }
     }
     #about {
-      background: url("/bg/paper_dark.png"), var(--black);
+      background: var(--black) url("/bg/paper_dark.png");
+      background-repeat: no-repeat;
       background-blend-mode: multiply;
       min-height: 500px;
       display: grid;
@@ -214,6 +216,22 @@
       margin-top: 20px;
       padding: 1em 0;
       padding-top: 1em;
+      position: relative;
+
+      // &::before {
+      //   content: "";
+      //   position: absolute;
+      //   top: 0%;
+      //   left: 0%;
+      //   width: 100%;
+      //   height: 100%;
+      //   background: url("/bg/paper_dark.png");
+      //   mix-blend-mode: multiply;
+      //   opacity: 1;
+      //   user-select: none;
+      //   pointer-events: none;
+      //   background-repeat: no-repeat;
+      // }
 
       @media screen and (max-width: 550px) {
         margin-top: 0px;
