--- a/src/app/portfolio/portfolio.scss
+++ b/src/app/portfolio/portfolio.scss
@@ -1,5 +1,5 @@
 #page_portfolio {
-  overflow-y: hidden;
+  // overflow-y: hidden;
   max-height: 100vh;
   position: relative;
   #portfolio-display {
@@ -24,6 +24,7 @@
         width: 100vw;
         overflow: clip;
       }
+
       position: relative;
       z-index: 100;
       .close-btn {
@@ -144,6 +145,10 @@
       display: flex;
       flex-direction: column;
       justify-content: space-between;
+      @media screen and (max-height: 900px) {
+        justify-content: flex-start;
+        gap: 2em;
+      }
       .categories {
         display: flex;
         justify-content: flex-end;
@@ -151,6 +156,9 @@
         // margin-top: 5em;
         gap: 0.5em;
         margin-bottom: 4em;
+        @media screen and (max-height: 720px) {
+          gap: 0.2em;
+        }
         .btn-cat {
           width: 100%;
           text-align: left;
@@ -161,6 +169,10 @@
           color: #23292b96;
           padding: 0.25em 1em;
           text-transform: uppercase;
+
+          @media screen and (max-height: 720px) {
+            font-size: 0.9rem;
+          }
           &.selected {
             background: var(--black);
             border: 2px solid var(--gold);
@@ -179,8 +191,8 @@
       @media screen and (max-width: 768px) {
         min-height: 900px;
       }
-      min-height: 100vh;
-
+      // min-height: 100vh;
+      height: 100%;
       .lists {
         // height: 90vh;
         height: 100%;
@@ -211,12 +223,24 @@
           @media screen and (max-width: 420px) {
             width: 80vw;
           }
+          @media screen and (max-height: 900px) {
+            width: auto;
+            // object-fit: contain;
+          }
           .pitems {
             width: 100%;
             height: 405px;
+
             transition: all 450ms var(--mainEase);
             @media screen and (max-width: 420px) {
               height: 200px;
+            }
+
+            @media screen and (max-height: 900px) {
+              width: 400px;
+              height: auto;
+              // aspect-ratio: 16 / 9;
+              // object-fit: contain;
             }
             cursor: pointer;
             &:hover {
