--- a/src/app/portfolio/portfolio.scss
+++ b/src/app/portfolio/portfolio.scss
@@ -209,7 +209,7 @@
         display: flex;
         white-space: nowrap;
         overflow-x: auto;
-        gap: 2em;
+        gap: 1.5em;
         padding-right: 50vh;
         .row {
           flex-shrink: 0;
@@ -223,10 +223,10 @@
           @media screen and (max-width: 420px) {
             width: 80vw;
           }
-          @media screen and (max-height: 900px) {
-            width: auto;
-            // object-fit: contain;
-          }
+          // @media screen and (max-height: 900px) {
+          //   width: auto;
+          //   // object-fit: contain;
+          // }
           .pitems {
             width: 100%;
             height: 405px;
@@ -236,12 +236,12 @@
               height: 200px;
             }
 
-            @media screen and (max-height: 900px) {
-              width: 400px;
-              height: auto;
-              // aspect-ratio: 16 / 9;
-              // object-fit: contain;
-            }
+            // @media screen and (max-height: 900px) {
+            //   width: 400px;
+            //   height: auto;
+            //   // aspect-ratio: 16 / 9;
+            //   // object-fit: contain;
+            // }
             cursor: pointer;
             &:hover {
               scale: 1.05;
