--- a/src/app/components/header/header.scss
+++ b/src/app/components/header/header.scss
@@ -152,6 +152,47 @@
       @media screen and (max-width: 1024px) {
         font-size: 1rem;
       }
+
+      &.hasdrop {
+        .drop-down {
+          // display: none;
+          position: absolute;
+          width: 100%;
+          padding-top: 20px;
+          display: flex;
+          flex-direction: column;
+          gap: 0.5em;
+          transition: all 500ms ease;
+          opacity: 0;
+          top: 100%;
+          transform: translateY(-20%);
+          .btn-drop {
+            font-weight: lighter;
+            background: #8ac7ed39;
+            opacity: 0.7;
+            transform: translateY(-200%);
+            &:nth-child(2) {
+              transition-delay: 50ms;
+            }
+            &:hover {
+              transition-delay: 0;
+              opacity: 1;
+              background: var(--grey);
+              color: white;
+            }
+          }
+        }
+        &:hover {
+          .drop-down {
+            // display: block;
+            transform: translateY(0%);
+            opacity: 1;
+            .btn-drop {
+              transform: translateY(0%);
+            }
+          }
+        }
+      }
       &::before {
         width: 100%;
         height: 100%;
