--- a/src/app/commissions/prices/prices.scss
+++ b/src/app/commissions/prices/prices.scss
@@ -409,3 +409,87 @@
     }
   }
 }
+
+#prices-heading {
+  margin-bottom: 150px;
+  position: relative;
+  max-width: 900px;
+  margin: 180px auto;
+  padding: 0 1em;
+  .cloud {
+    position: absolute;
+
+    @media screen and (max-width: 550px) {
+      scale: 0.5;
+      top: -250px !important;
+    }
+    &.l {
+      left: -800px;
+      bottom: -220px;
+      display: none;
+      rotate: -40deg;
+    }
+
+    &.r {
+      right: -150px;
+      bottom: -240px;
+    }
+  }
+  // .cloud {
+  //   display: none;
+  // }
+  .confine {
+    @media screen and (min-width: 768px) {
+      display: grid;
+      grid-template-columns: 1.1fr 1fr;
+    }
+    max-width: min(950px, 90%);
+    gap: 3em;
+    align-items: center;
+    figure {
+      .splat {
+        position: absolute;
+        z-index: -100;
+        left: 10%;
+        scale: 2;
+        opacity: 0.4;
+      }
+      position: relative;
+      &::before {
+        content: "";
+        position: absolute;
+        top: 0%;
+        left: 0%;
+        width: 100%;
+        height: 100%;
+        outline: 3px solid var(--gold);
+        z-index: 10;
+        outline-offset: -10px;
+      }
+      img {
+        max-height: 250px;
+        object-fit: cover;
+        width: 100%;
+        height: 100%;
+        z-index: -2;
+        position: relative;
+        // display: none;
+      }
+    }
+
+    article {
+      position: relative;
+      .de-moon {
+        position: absolute;
+        top: -50%;
+        left: 75%;
+        scale: 1.5;
+        z-index: -2;
+        height: 150%;
+      }
+      .p {
+        margin: 1em 0;
+      }
+    }
+  }
+}
