--- a/src/app/contact/contact.scss
+++ b/src/app/contact/contact.scss
@@ -101,6 +101,11 @@
             font-weight: bold;
           }
         }
+        a {
+          p {
+            text-decoration: underline;
+          }
+        }
       }
 
       .contacts {
