--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -230,7 +230,7 @@ body {
 .btn-over {
   position: fixed;
   bottom: 0%;
-
+  left: 20px;
   background: #283f58;
   color: white;
   padding: 1em;
@@ -244,6 +244,12 @@ body {
   padding: 0.25em 1em;
   &:hover {
     outline-offset: 10px;
+  }
+
+  &.alt {
+    color: var(--gold);
+    background-color: #0e81a5;
+    outline-color: #0e81a5;
   }
   // filter: drop-shadow(2px -4px 2px #00000099);
 }
