--- a/src/app/components/header/header.scss
+++ b/src/app/components/header/header.scss
@@ -6,7 +6,7 @@
   max-width: 100vw;
   margin-bottom: 100px;
   gap: 0.45em;
-  z-index: 2;
+  z-index: 20;
   overflow-x: clip;
   position: relative;
   @media screen and (max-width: 768px) {
@@ -157,20 +157,27 @@
         .drop-down {
           // display: none;
           position: absolute;
-          width: 100%;
+          width: 150px;
           padding-top: 20px;
           display: flex;
           flex-direction: column;
-          gap: 0.5em;
+          gap: 0.2em;
           transition: all 500ms ease;
           opacity: 0;
           top: 100%;
-          transform: translateY(-20%);
+          left: 50%;
+          transform: translateX(-50%) translateY(-20%);
+          z-index: 10;
           .btn-drop {
             font-weight: lighter;
-            background: #8ac7ed39;
-            opacity: 0.7;
+            background: #e5f2fb;
+            opacity: 1;
             transform: translateY(-200%);
+            font-size: 1rem;
+            font-family: var(--fontr);
+            letter-spacing: 0px;
+            padding: 0.25em;
+            box-shadow: 0px 0px 4px rgba(146, 161, 239, 0.216);
             &:nth-child(2) {
               transition-delay: 50ms;
             }
@@ -185,7 +192,7 @@
         &:hover {
           .drop-down {
             // display: block;
-            transform: translateY(0%);
+            transform: translateX(-50%) translateY(0%);
             opacity: 1;
             .btn-drop {
               transform: translateY(0%);
