--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -77,7 +77,7 @@ body {
 main {
   position: relative;
   overflow-x: clip;
-  min-height: 130vh;
+  // min-height: 130vh;
   // max-width: 100vw;
 }
 
@@ -256,4 +256,16 @@ body {
     outline-color: #0e81a5;
   }
   // filter: drop-shadow(2px -4px 2px #00000099);
+}
+
+.hovering {
+  animation: hovering 5s infinite ease-in-out alternate-reverse;
+  @keyframes hovering {
+    from {
+      transform: translateY(-4%);
+    }
+    to {
+      transform: translateY(1%);
+    }
+  }
 }
